# TellSpark

./: .gitignore  README.md  build.sbt  compile.sh
src/main/: CMakeLists.txt  cimpl.cpp  main.cpp
src/main/c/example/: example.i  example.java  exampleJNI.java  swigRun.sh
src/main/c/muTell/: customer.h
src/main/cpp/example/: SWIGTYPE_p_Point.java  SWIGTYPE_p_int.java  example.c  example_wrap.c  runme.java  swigRun.sh
src/main/cpp/mockDataGen/: CMakeLists.txt  Customer.cpp  Customer.h  DataSource.cpp  DataSource.h  compile.sh  main.cpp
src/main/cpp/mockDataGen/include/: Customer.h  DataSource.h
src/main/cpp/mockDataGen/src/: Customer.cpp  DataSource.cpp  main.cpp
src/main/java/ch/ethz/: Customer.java  Main.java  NativeTester.java
src/main/java/ch/ethz/tell/: TScanQuery.java
src/main/scala/ch/ethz/: Debugger.scala  Experimental.scala  TellClient.scala  TellClientFactory.scala  TellPartition.scala  TellRDD.scala  TellRecord.scala  TellSchema.scala  tellPartition.scala  tellRDD.scala
src/main/scala/ch/ethz/queries/: CHSchema.scala  ChQuery.scala  ChTSchema.scala  MicroQuery.scala  ParamHandler.scala  Q1.scala  Q10.scala  Q11.scala  Q12.scala  Q13.scala  Q14.scala  Q15.scala  Q16.scala  Q17.scala  Q18.scala  Q19.scala  Q2.scala  Q20.scala  Q21.scala  Q22.scala  Q3.scala  Q4.scala  Q5.scala  Q6.scala  Q7.scala  Q8.scala  Q9.scala  QueryRunner.scala  TpchQuery.scala
src/main/scala/ch/ethz/queries/chb/: ChTSchema.scala  Q1.scala  Q10.scala  Q11.scala  Q12.scala  Q13.scala  Q14.scala  Q15.scala  Q16.scala  Q17.scala  Q18.scala  Q19.scala  Q2.scala  Q20.scala  Q21.scala  Q22.scala  Q3.scala  Q4.scala  Q5.scala  Q6.scala  Q7.scala  (+3 more)
src/main/scala/ch/ethz/tell/: Application.scala  BufferType.scala  TClientFactory.scala  TPartition.scala  TRDD.scala  TRecord.scala  TSchema.scala  TSparkContext.scala  TStorageConnection.scala  TellContext.scala  TellPartition.scala  TellRDD.scala  TellRecord.scala  TellRelation.scala  TellSchema.scala
(+28 files in other folders)
